--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "formidable": "^2.0.1",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.4",
+    "nodemailer": "^6.7.7"
   },
   "scripts": {
     "dev": "nodemon index",
